Исправления после проверки валидатора

--- a/photo.html
+++ b/photo.html
@@ -46,7 +46,7 @@
                 </g>
               </g>
             </svg>
-            <svg class="main-nav__toggler-opened" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867" xml:space="preserve">
+            <svg class="main-nav__toggler-opened" version="1.0" id="Layer_1_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867" xml:space="preserve">
               <path class="main-nav__toggler-fill" fill="#FFFFFF" d="M15.087,11.933l8.56-8.559c0.293-0.293,0.293-0.768,0-1.061L21.554,0.22C21.414,0.079,21.223,0,21.023,0 c-0.199,0-0.391,0.079-0.529,0.22l-8.561,8.56l-8.56-8.56c-0.282-0.282-0.78-0.282-1.061,0L0.22,2.313 c-0.293,0.293-0.293,0.768,0,1.061l8.56,8.559l-8.56,8.559c-0.293,0.293-0.293,0.768,0,1.062l2.093,2.094 c0.141,0.142,0.331,0.22,0.53,0.22c0.199,0,0.39-0.078,0.53-0.22l8.561-8.56l8.56,8.56c0.141,0.142,0.332,0.22,0.53,0.22 c0.199,0,0.39-0.078,0.53-0.22l2.093-2.094c0.293-0.294,0.293-0.769,0-1.062L15.087,11.933z"/>
             </svg>
           </button>
@@ -82,7 +82,7 @@
           <div class="gallery__post-content   gallery__post-content--daily">
             <header class="gallery__info  gallery__info--daily">
               <cite class="gallery__post-author">Анна</cite>
-              <time class="gallery__post-date">(5 минут назад)</time>
+              <span class="gallery__post-date">(5 минут назад)</span>
             </header>
             <p class="gallery__post-text">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
             <section class="gallery__post-likes  gallery__post-likes--daily">
@@ -105,7 +105,7 @@
             <div class="gallery__post-content">
               <header class="gallery__info">
                 <cite class="gallery__post-author">Левон</cite>
-                <time class="gallery__post-date">(5 часов назад)</time>
+                <span class="gallery__post-date">(5 часов назад)</span>
               </header>
               <p class="gallery__post-text">Вчера он на Луну летал, сегодня в руки к нам попал.</p>
               <section class="gallery__post-likes">
@@ -125,9 +125,9 @@
             <div class="gallery__post-content">
               <header class="gallery__info">
                 <cite class="gallery__post-author">Антон</cite>
-                <time class="gallery__post-date">(12 часов назад)</time>
+                <span class="gallery__post-date">(12 часов назад)</span>
               </header>
-              <p p class="gallery__post-text">Соседи будут рады!</p>
+              <p class="gallery__post-text">Соседи будут рады!</p>
               <section class="gallery__post-likes">
                 <i class="gallery__post-btn btn">Лайк</i>
                 <span>Нравится: 666</span>
@@ -147,7 +147,7 @@
             <div class="gallery__post-content">
               <header class="gallery__info  gallery__info--daily">
                 <cite class="gallery__post-author">Борис</cite>
-                <time class="gallery__post-date">(20 часов назад)</time>
+                <span class="gallery__post-date">(20 часов назад)</span>
               </header>
               <p class="gallery__post-text">Здесь могла быть ваша цитата о высоком и вечном.</p>
               <section class="gallery__post-likes">
@@ -169,7 +169,7 @@
             <div class="gallery__post-content">
               <header class="gallery__info">
                 <cite class="gallery__post-author">Сергей</cite>
-                <time class="gallery__post-date">(25 часов назад)</time>
+                <span class="gallery__post-date">(25 часов назад)</span>
               </header>
               <p class="gallery__post-text">Самая кубанская в мире!</p>
               <section class="gallery__post-likes">
@@ -191,7 +191,7 @@
             <div class="gallery__post-content">
               <header class="gallery__info">
                 <cite class="gallery__post-author">Максим</cite>
-                <time class="gallery__post-date">(40 часов назад)</time>
+                <span class="gallery__post-date">(40 часов назад)</span>
               </header>
               <p class="gallery__post-text">Где снег-то?</p>
               <section class="gallery__post-likes">
@@ -213,7 +213,7 @@
             <div class="gallery__post-content">
               <header class="gallery__info">
                 <cite class="gallery__post-author">Надежда</cite>
-                <time class="gallery__post-date">(45 часов назад)</time>
+                <span class="gallery__post-date">(45 часов назад)</span>
               </header>
               <p class="gallery__post-text">Всем GM и взаимные лайки!</p>
               <section class="gallery__post-likes">
