--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Пинк: Фотографии</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <header class="page-header">
@@ -380,7 +380,7 @@
           </svg>
         </a>
       </section>
-      <section class="page-footer__social">
+      <section class="page-footer__social  page-footer__social--photo">
         <a class="social-link  social-link--tw" href="#">Мы в Твиттере</a>
         <a class="social-link  social-link--fb" href="#">Мы в Фейсбуке</a>
         <a class="social-link  social-link--yt" href="#">Мы на Youtube</a>
@@ -394,5 +394,6 @@
         </a>
       </section>
     </footer>
+    <script src="js/srcipt.js"></script>
   </body>
 </html>
