--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <section class="research">
         <div class="research__inner">
           <h2 class="research__title">Эффект <span>на 24 часа!</span></h2>
-          <p class="research__text">Британские ученые провели исследования <span>и доказали, </span><span> что положительный эффект</span>
+          <p class="research__text">Британские ученые провели исследования и доказали, <span> что положительный эффект</span>
           <span> от использования приложения</span> длится целые сутки!</p>
           <a class="research__link" href="#">Узнать больше об исследовании</a>
         </div>
