--- a/index.html
+++ b/index.html
@@ -126,10 +126,12 @@
       </section>
       <section class="research">
         <div class="research__inner">
-          <h2 class="research__title">Эффект <span>на 24 часа!</span></h2>
-          <p class="research__text">Британские ученые провели исследования и доказали, <span> что положительный эффект</span>
-          <span> от использования приложения</span> длится целые сутки!</p>
-          <a class="research__link" href="#">Узнать больше об исследовании</a>
+          <div class="research__promo">
+            <h2 class="research__title">Эффект <span>на 24 часа!</span></h2>
+            <p class="research__text">Британские ученые провели исследования и доказали, <span> что положительный эффект</span>
+            <span> от использования приложения</span> длится целые сутки!</p>
+            <a class="research__link" href="#">Узнать больше об исследовании</a>
+          </div>
         </div>
       </section>
       <section class="reviews">
